[package]
name = "egui_example"
version = "0.1.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2018"

# WGPU requires cargo resolver v2
resolver = "2"

[dependencies]
egui_glow = {version = "0.17",default_features = false,features=["epi"]}
egui = "0.17"
epi = "0.17"
egui_winit_platform = "0.14"
winit = "0.26"
instant ="0.1"
wasm-bindgen="0.2"
web-sys="0.3"
console_error_panic_hook="0.1"
wasm-bindgen-futures = "0.4"
[patch.crates-io]
winit = {git="https://github.com/t18b219k/winit.git",branch="composition-event"}
egui_winit_platform={git="https://github.com/t18b219k/egui_winit_platform.git",branch="master"}