[package]
name = "egui_example"
version = "0.1.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2018"

# WGPU requires cargo resolver v2
resolver = "2"

[dependencies]
egui_glow = {version = "0.16",default_features = false}
chrono = "0.4"
egui = "0.16"
epi = "0.16"
egui_winit_platform = "0.13"
wgpu = "0.12"
winit = "0.26"
egui_demo_lib = "0.16"
instant ="0.1"
[target.'cfg(not(target_arch="wasm32"))'.dependencies]
env_logger = "0.9.0"
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen="0.2"
web-sys="0.3"
console_error_panic_hook="0.1"
console_log = "0.2"
wasm-bindgen-futures = "0.4"
# egui = { version = "0.5", git = "https://github.com/emilk/egui" }
# egui_wgpu_backend = { path = "../egui_wgpu_backend" }
# egui_winit_platform = { path = "../egui_winit_platform" }
